--- a/tox.ini
+++ b/tox.ini
@@ -20,13 +20,12 @@ deps=
     django-appconf
     django-override-settings
     PyYAML
+commands=
+    coverage run --source=src/registration runtests.py []
+whitelist_externals=
     coverage
     coveralls
-commands=
-    {envbindir}/coverage erase
-    {envbindir}/coverage run --source=src/registration runtests.py []
-    {envbindir}/coverage report
-whitelist_externals=
+    make
     mkdir
     cp
     2to3
@@ -94,9 +93,7 @@ commands=
     cp -rf tests {envdir}/build
     2to3 --output-dir={envdir}/build/src -W -n src
     2to3 --output-dir={envdir}/build/tests -W -n tests
-    {envbindir}/coverage erase
-    {envbindir}/coverage run --source=src/registration runtests.py --where={envdir}/build []
-    {envbindir}/coverage report
+    {envpython} runtests.py --where={envdir}/build []
 
 [testenv:py32-django16]
 basepython=python3.2
@@ -107,9 +104,7 @@ commands=
     cp -rf tests {envdir}/build
     2to3 --output-dir={envdir}/build/src -W -n src
     2to3 --output-dir={envdir}/build/tests -W -n tests
-    {envbindir}/coverage erase
-    {envbindir}/coverage run --source=src/registration runtests.py --where={envdir}/build []
-    {envbindir}/coverage report
+    {envpython} runtests.py --where={envdir}/build []
 
 
 [testenv:py33-django15]
@@ -121,9 +116,7 @@ commands=
     cp -rf tests {envdir}/build
     2to3 --output-dir={envdir}/build/src -W -n src
     2to3 --output-dir={envdir}/build/tests -W -n tests
-    {envbindir}/coverage erase
-    {envbindir}/coverage run --source=src/registration runtests.py --where={envdir}/build []
-    {envbindir}/coverage report
+    {envpython} runtests.py --where={envdir}/build []
 
 [testenv:py33-django16]
 basepython=python3.3
@@ -134,7 +127,5 @@ commands=
     cp -rf tests {envdir}/build
     2to3 --output-dir={envdir}/build/src -W -n src
     2to3 --output-dir={envdir}/build/tests -W -n tests
-    {envbindir}/coverage erase
-    {envbindir}/coverage run --source=src/registration runtests.py --where={envdir}/build []
-    {envbindir}/coverage report
+    {envpython} runtests.py --where={envdir}/build []
 
