--- a/tox.ini
+++ b/tox.ini
@@ -8,18 +8,21 @@ envlist =
     py27-django14,
     py27-django15,
     py27-django16,
+    py27-django17,
     py32-django15,
     py32-django16,
+    py32-django17,
     py33-django15,
     py33-django16,
+    py33-django17,
+    py34-django15,
+    py34-django16,
+    py34-django17,
     docs
 
 [testenv]
 deps=
-    app_version>=0.1.1
-    django-appconf
-    django-override-settings
-    PyYAML
+    -rrequirements-test.txt
     coverage
 commands=
     coverage run --source=src/registration runtests.py []
@@ -45,17 +48,22 @@ deps=
 [django14]
 deps=
     {[testenv]deps}
-    django==1.4.10
+    django==1.4.13
 
 [django15]
 deps= 
     {[testenv]deps}
-    django==1.5.5
+    django==1.5.8
 
 [django16]
 deps= 
     {[testenv]deps}
-    django==1.6
+    django==1.6.5
+
+[django17]
+deps= 
+    {[testenv]deps}
+    https://www.djangoproject.com/download/1.7c1/tarball/
 
 [testenv:py26-django13]
 basepython=python2.6
@@ -82,6 +90,9 @@ deps={[django15]deps}
 [testenv:py27-django16]
 basepython=python2.7
 deps={[django16]deps}
+[testenv:py27-django17]
+basepython=python2.7
+deps={[django17]deps}
 
 [testenv:py32-django15]
 basepython=python3.2
@@ -93,10 +104,19 @@ commands=
     2to3 --output-dir={envdir}/build/src -W -n src
     2to3 --output-dir={envdir}/build/tests -W -n tests
     {envpython} runtests.py --where={envdir}/build []
-
 [testenv:py32-django16]
 basepython=python3.2
 deps={[django16]deps}
+commands=
+    mkdir -p {envdir}/build
+    cp -rf src {envdir}/build
+    cp -rf tests {envdir}/build
+    2to3 --output-dir={envdir}/build/src -W -n src
+    2to3 --output-dir={envdir}/build/tests -W -n tests
+    {envpython} runtests.py --where={envdir}/build []
+[testenv:py32-django17]
+basepython=python3.2
+deps={[django17]deps}
 commands=
     mkdir -p {envdir}/build
     cp -rf src {envdir}/build
@@ -116,7 +136,6 @@ commands=
     2to3 --output-dir={envdir}/build/src -W -n src
     2to3 --output-dir={envdir}/build/tests -W -n tests
     {envpython} runtests.py --where={envdir}/build []
-
 [testenv:py33-django16]
 basepython=python3.3
 deps={[django16]deps}
@@ -127,4 +146,43 @@ commands=
     2to3 --output-dir={envdir}/build/src -W -n src
     2to3 --output-dir={envdir}/build/tests -W -n tests
     {envpython} runtests.py --where={envdir}/build []
-
+[testenv:py33-django17]
+basepython=python3.3
+deps={[django17]deps}
+commands=
+    mkdir -p {envdir}/build
+    cp -rf src {envdir}/build
+    cp -rf tests {envdir}/build
+    2to3 --output-dir={envdir}/build/src -W -n src
+    2to3 --output-dir={envdir}/build/tests -W -n tests
+    {envpython} runtests.py --where={envdir}/build []
+[testenv:py34-django15]
+basepython=python3.4
+deps={[django15]deps}
+commands=
+    mkdir -p {envdir}/build
+    cp -rf src {envdir}/build
+    cp -rf tests {envdir}/build
+    2to3 --output-dir={envdir}/build/src -W -n src
+    2to3 --output-dir={envdir}/build/tests -W -n tests
+    {envpython} runtests.py --where={envdir}/build []
+[testenv:py34-django16]
+basepython=python3.4
+deps={[django16]deps}
+commands=
+    mkdir -p {envdir}/build
+    cp -rf src {envdir}/build
+    cp -rf tests {envdir}/build
+    2to3 --output-dir={envdir}/build/src -W -n src
+    2to3 --output-dir={envdir}/build/tests -W -n tests
+    {envpython} runtests.py --where={envdir}/build []
+[testenv:py34-django17]
+basepython=python3.4
+deps={[django17]deps}
+commands=
+    mkdir -p {envdir}/build
+    cp -rf src {envdir}/build
+    cp -rf tests {envdir}/build
+    2to3 --output-dir={envdir}/build/src -W -n src
+    2to3 --output-dir={envdir}/build/tests -W -n tests
+    {envpython} runtests.py --where={envdir}/build []
