Add HTMLs into MANIFEST.in

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -3,3 +3,4 @@ include requirements.txt
 include requirements-test.txt
 include requirements-docs.txt
 recursive-include src/registration/locale *.po *.mo
+recursive-include src/registration/templates *.html
