--- a/tox.ini
+++ b/tox.ini
@@ -1,36 +1,40 @@
 [tox]
 envlist =
-    py26-django13,
-    py26-django14,
-    py26-django15,
-    py26-django16,
-    py27-django13,
-    py27-django14,
-    py27-django15,
-    py27-django16,
-    py27-django17,
-    py32-django15,
-    py32-django16,
-    py32-django17,
-    py33-django15,
-    py33-django16,
-    py33-django17,
-    py34-django15,
-    py34-django16,
-    py34-django17,
+    {py26,py27}-django{13,14,15,16},
+    {py27}-django{17},
+    {py32,py33,py34}-django{15,16,17},
     docs
 
 [testenv]
+basepython =
+    py26: python2.6
+    py27: python2.7
+    py32: python3.2
+    py33: python3.3
+    py34: python3.4
 deps=
+    django12: django>=1.2,<1.3
+    django13: django>=1.3,<1.4
+    django14: django>=1.4,<1.5
+    django15: django>=1.5,<1.6
+    django16: django>=1.6,<1.7
+    django17: django>=1.7,<1.8
     -rrequirements-test.txt
     coverage
 commands=
-    coverage run --source=src/registration runtests.py []
+    py26,py27: {envbindir}/coverage run --source=src/registration runtests.py []
+    py32,py33,py34: mkdir -p {envdir}/build
+    py32,py33,py34: cp -rf src {envdir}/build
+    py32,py33,py34: cp -rf tests {envdir}/build
+    py32,py33,py34: 2to3 -p --no-diffs --output-dir={envdir}/build/src -W -n src
+    py32,py33,py34: 2to3 -p --no-diffs --output-dir={envdir}/build/tests -W -n tests
+    py32,py33,py34: {envbindir}/coverage run --source={envdir}/build/src/registration runtests.py --where={envdir}/build []
+    coverage report
 whitelist_externals=
-    make
-    mkdir
-    cp
-    2to3
+    py32,py33,py34: make
+    py32,py33,py34: mkdir
+    py32,py33,py34: cp
+    py32,py33,py34: 2to3
 
 [testenv:docs]
 basepython=python
@@ -39,150 +43,3 @@ deps=-rrequirements-docs.txt
 commands=
     make clean
     make html
-
-[django13]
-deps= 
-    {[testenv]deps}
-    django==1.3.7
-
-[django14]
-deps=
-    {[testenv]deps}
-    django==1.4.13
-
-[django15]
-deps= 
-    {[testenv]deps}
-    django==1.5.8
-
-[django16]
-deps= 
-    {[testenv]deps}
-    django==1.6.5
-
-[django17]
-deps= 
-    {[testenv]deps}
-    https://www.djangoproject.com/download/1.7c1/tarball/
-
-[testenv:py26-django13]
-basepython=python2.6
-deps={[django13]deps}
-[testenv:py26-django14]
-basepython=python2.6
-deps={[django14]deps}
-[testenv:py26-django15]
-basepython=python2.6
-deps={[django15]deps}
-[testenv:py26-django16]
-basepython=python2.6
-deps={[django16]deps}
-
-[testenv:py27-django13]
-basepython=python2.7
-deps={[django13]deps}
-[testenv:py27-django14]
-basepython=python2.7
-deps={[django14]deps}
-[testenv:py27-django15]
-basepython=python2.7
-deps={[django15]deps}
-[testenv:py27-django16]
-basepython=python2.7
-deps={[django16]deps}
-[testenv:py27-django17]
-basepython=python2.7
-deps={[django17]deps}
-
-[testenv:py32-django15]
-basepython=python3.2
-deps={[django15]deps}
-commands=
-    mkdir -p {envdir}/build
-    cp -rf src {envdir}/build
-    cp -rf tests {envdir}/build
-    2to3 --output-dir={envdir}/build/src -W -n src
-    2to3 --output-dir={envdir}/build/tests -W -n tests
-    {envpython} runtests.py --where={envdir}/build []
-[testenv:py32-django16]
-basepython=python3.2
-deps={[django16]deps}
-commands=
-    mkdir -p {envdir}/build
-    cp -rf src {envdir}/build
-    cp -rf tests {envdir}/build
-    2to3 --output-dir={envdir}/build/src -W -n src
-    2to3 --output-dir={envdir}/build/tests -W -n tests
-    {envpython} runtests.py --where={envdir}/build []
-[testenv:py32-django17]
-basepython=python3.2
-deps={[django17]deps}
-commands=
-    mkdir -p {envdir}/build
-    cp -rf src {envdir}/build
-    cp -rf tests {envdir}/build
-    2to3 --output-dir={envdir}/build/src -W -n src
-    2to3 --output-dir={envdir}/build/tests -W -n tests
-    {envpython} runtests.py --where={envdir}/build []
-
-
-[testenv:py33-django15]
-basepython=python3.3
-deps={[django15]deps}
-commands=
-    mkdir -p {envdir}/build
-    cp -rf src {envdir}/build
-    cp -rf tests {envdir}/build
-    2to3 --output-dir={envdir}/build/src -W -n src
-    2to3 --output-dir={envdir}/build/tests -W -n tests
-    {envpython} runtests.py --where={envdir}/build []
-[testenv:py33-django16]
-basepython=python3.3
-deps={[django16]deps}
-commands=
-    mkdir -p {envdir}/build
-    cp -rf src {envdir}/build
-    cp -rf tests {envdir}/build
-    2to3 --output-dir={envdir}/build/src -W -n src
-    2to3 --output-dir={envdir}/build/tests -W -n tests
-    {envpython} runtests.py --where={envdir}/build []
-[testenv:py33-django17]
-basepython=python3.3
-deps={[django17]deps}
-commands=
-    mkdir -p {envdir}/build
-    cp -rf src {envdir}/build
-    cp -rf tests {envdir}/build
-    2to3 --output-dir={envdir}/build/src -W -n src
-    2to3 --output-dir={envdir}/build/tests -W -n tests
-    {envpython} runtests.py --where={envdir}/build []
-[testenv:py34-django15]
-basepython=python3.4
-deps={[django15]deps}
-commands=
-    mkdir -p {envdir}/build
-    cp -rf src {envdir}/build
-    cp -rf tests {envdir}/build
-    2to3 --output-dir={envdir}/build/src -W -n src
-    2to3 --output-dir={envdir}/build/tests -W -n tests
-    {envpython} runtests.py --where={envdir}/build []
-[testenv:py34-django16]
-basepython=python3.4
-deps={[django16]deps}
-commands=
-    mkdir -p {envdir}/build
-    cp -rf src {envdir}/build
-    cp -rf tests {envdir}/build
-    2to3 --output-dir={envdir}/build/src -W -n src
-    2to3 --output-dir={envdir}/build/tests -W -n tests
-    {envpython} runtests.py --where={envdir}/build []
-[testenv:py34-django17]
-basepython=python3.4
-deps={[django17]deps}
-commands=
-    mkdir -p {envdir}/build
-    cp -rf src {envdir}/build
-    cp -rf tests {envdir}/build
-    2to3 --output-dir={envdir}/build/src -W -n src
-    2to3 --output-dir={envdir}/build/tests -W -n tests
-    {envpython} runtests.py --where={envdir}/build []
