--- a/tox.ini
+++ b/tox.ini
@@ -2,14 +2,13 @@
 envlist =
     {py26,py27}-django{15,16},
     {py27}-django{17,18},
-    {py32,py33,py34}-django{15,16,17,18},
+    {py33,py34}-django{15,16,17,18},
     docs
 
 [testenv]
 basepython =
     py26: python2.6
     py27: python2.7
-    py32: python3.2
     py33: python3.3
     py34: python3.4
 deps=
