--- a/tox.ini
+++ b/tox.ini
@@ -1,8 +1,9 @@
 [tox]
 envlist =
     {py26,py27}-django{15,16},
-    {py27}-django{17,18},
+    {py27}-django{17,18,19},
     {py33,py34}-django{15,16,17,18},
+    {py34}-django{15,16,17,18,19},
     docs
 
 [testenv]
@@ -16,6 +17,7 @@ deps=
     django16: django>=1.6,<1.7
     django17: django>=1.7,<1.8
     django18: django>=1.8,<1.9
+    django19: django>=1.9,<1.10
     -rrequirements-test.txt
     coverage
 commands=
