Use tox-travis to run on Travis CI

--- a/tox.ini
+++ b/tox.ini
@@ -6,6 +6,13 @@ envlist =
     {py34}-django{15,16,17,18,19},
     docs
 
+[tox:travis]
+2.6 = py26-django{12,13,14,15,16}
+2.7 = py27-django{12,13,14,15,16,17,18,19}
+3.2 = py33-django{15,16,17,18}
+3.3 = py33-django{15,16,17,18}
+3.4 = py34-django{15,16,17,18,19}
+
 [testenv]
 basepython =
     py26: python2.6
