--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 sudo: false
 language: python
 install:
-  - pip install tox
+  - pip install tox tox-travis
   - pip install coverage coveralls
 
 script:
