Add Python3.5 to supported Python version

--- a/tox.ini
+++ b/tox.ini
@@ -1,17 +1,18 @@
 [tox]
 envlist =
-    {py26,py27}-django{15,16},
-    {py27}-django{17,18,19},
-    {py33,py34}-django{15,16,17,18},
-    {py34}-django{15,16,17,18,19},
+    py26-django{15,16},
+    py27-django{15,16,17,18,19},
+    py33-django{15,16,17,18},
+    py34-django{15,16,17,18,19},
+    py35-django{18,19},
     docs
 
 [tox:travis]
-2.6 = py26-django{12,13,14,15,16}
-2.7 = py27-django{12,13,14,15,16,17,18,19}
-3.2 = py33-django{15,16,17,18}
+2.6 = py26-django{15,16}
+2.7 = py27-django{15,16,17,18,19}
 3.3 = py33-django{15,16,17,18}
 3.4 = py34-django{15,16,17,18,19}
+3.5 = py35-django{18,19}
 
 [testenv]
 basepython =
@@ -19,6 +20,7 @@ basepython =
     py27: python2.7
     py33: python3.3
     py34: python3.4
+    py35: python3.5
 deps=
     django15: django>=1.5,<1.6
     django16: django>=1.6,<1.7
